Fix overflow headaches

--- a/css/index.css
+++ b/css/index.css
@@ -125,7 +125,7 @@ svg {
    grid-area: dashboard;
 
    display: grid;
-   grid-template-rows: min-content 1fr;
+   grid-template-rows: min-content auto;
 
    height: 100vh;
 }
@@ -233,14 +233,18 @@ svg {
 }
 
 .content {
+   --content-padding: 1rem;
+   --num-rows: 2;
+   --row-height: calc(50% - calc(var(--content-padding) / var(--num-rows)));
+
    display: grid;
-   grid-template: 50% 50% / 3fr 1fr;
+   grid-template: repeat(var(--num-rows), var(--row-height)) / 3fr 1fr;
    grid-template-areas: 
    "projects announcements"
    "projects trending";
    gap: 1rem 1.5rem;
 
-   padding: 1rem;
+   padding: var(--content-padding);
    background-color: #E2E8F0;
 
    overflow: auto;
